syntax="proto3";

service SessionService {
	rpc RequestConnection(ConnectionRequestMessage) returns (ConnectionResponseMessage){}
	rpc Disconnection(RequestMessage) returns (Empty){}
}

enum ConnectionResponseType{
		REFUSED = 0;
		CONNECTION = 1;
		NEW_CONNECTION = 2; 
}

message ConnectionRequestMessage {
	string guid = 1;
	string name = 2;
}
message ConnectionResponseMessage{
	ConnectionResponseType responseType = 1;
	string responseToken = 2;
	string responseMessage = 3;
}
message RequestMessage{
	string token = 1;
}

message Empty{

}